[package]
name = "mockem"
version = "0.1.0"
edition = "2021"
authors = ["Jack Lee <jack.y.l.dev@gmail.com>"]
description = "mock'em functions!"
categories = ["Testing"]
keywords = ["testing", "mock", "mocking", "derive"]
documentation = "https://docs.rs/mockem"
repository = "https://github.com/poonesnerfect/mockem"
license = "MIT OR Apache-2.0"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockem-derive = { version = "0.1.0", path = "derive" }

[dev-dependencies]
async-trait = { version = "0.1" }
tokio = { version = "1", features = ["test-util", "macros"]}
tracing = { version = "0.1" }
