[package]
name = "mockem-derive"
version = "0.2.0"
edition = "2021"
authors = ["Jack Lee <jack.y.l.dev@gmail.com>"]
description = "derive for mockem"
categories = ["development-tools::testing"]
keywords = ["testing", "mock", "mocking", "derive"]
documentation = "https://docs.rs/mockem"
repository = "https://github.com/poonesnerfect/mockem"
license = "MIT OR Apache-2.0"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = { version = "2.0.23", features = ["full"] }

